@@ -1,5 +1,9 @@
+2012-11-29:
+  * Added simple var() and sd() wrappers for ddmatrix.
+
 2012-11-21:
   * Fixed QR methods.
+
 2012-10-30:
   * Fixed whining about qr-function generics.
   * Added some documentation.
